objects/TW1_Empreendimento__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Academia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Academia</description>
        <label>Academia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Banco_Financiador__c</fullName>
        <label>Banco Financiador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banco do Brasil</fullName>
                </value>
                <value>
                    <fullName>Bradesco</fullName>
                </value>
                <value>
                    <fullName>Caixa Econômica</fullName>
                </value>
                <value>
                    <fullName>Itaú</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Bar_Piscina__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Bar da Piscina</description>
        <label>Bar da Piscina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Brinquedoteca__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Brinquedoteca</description>
        <label>Brinquedoteca</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_CEP__c</fullName>
        <description>CEP do endereço do Empreendimento</description>
        <label>CEP</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Churrasqueira__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Churrasqueira</description>
        <label>Churrasqueira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <description>Cidade do Empreendimento</description>
        <label>Cidade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Obra_UAU__c</fullName>
        <externalId>true</externalId>
        <label>Código da Obra no ERP</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TW1_Data_Vistoria__c</fullName>
        <label>Data da Vistoria</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao__c</fullName>
        <label>Descricao</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Dth_Fim_Obra__c</fullName>
        <description>Data de Fim da Obra</description>
        <label>Fim da Obra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Dth_Inicio_Obra__c</fullName>
        <description>Data de início da Obra</description>
        <label>Inicio da Obra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Empresa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Empresa vinculada ao Empreendimento</description>
        <label>Empresa</label>
        <referenceTo>TW1_Empresa__c</referenceTo>
        <relationshipLabel>Empreendimentos</relationshipLabel>
        <relationshipName>Empreendimentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Endereco__c</fullName>
        <description>Endereço do Empreendimento</description>
        <label>Endereço</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Espacao_Kids__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Espaço Kids</description>
        <label>Espaço Kids</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Estado__c</fullName>
        <description>Estado do Empreendimento</description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TW1_Lista_Estado</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Imagem_Empreendimento__c</fullName>
        <description>Imagem do Empreendimento com fachada ou aérea</description>
        <label>Imagem</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TW1_Logo_Empreendimento__c</fullName>
        <description>Logomarca do Empreendimento</description>
        <label>⁬⁬⁭</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TW1_Metragem__c</fullName>
        <description>Área total do Empreendimento</description>
        <label>Metragem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_N_Blocos__c</fullName>
        <description>Número total de blocos do Empreendimento</description>
        <label>Nº de Blocos</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Piscina_Infantil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Piscina Infantil</description>
        <label>Piscina Infantil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Piscina__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Piscina.</description>
        <label>Piscina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Playground__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Playground</description>
        <label>Playground</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Qtd_Unidades__c</fullName>
        <description>Quantidade total de unidades do Empreendimento</description>
        <label>Qtd Unidades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Qtd_Vagas__c</fullName>
        <description>Quantidade total de vagas</description>
        <label>Qtd Vagas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Quadra_Poliesportiva__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Quadra Poliesportiva</description>
        <label>Quadra Poliesportiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Salao_Festas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Salão de Festas</description>
        <label>Salão de Festas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Salao_Jogos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Salão de Jogos</description>
        <label>Salão de Jogos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Sauna__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informa se o Empreendimento possui Sauna</description>
        <label>Sauna</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <description>Tipo do Empreendimento</description>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Residencial</fullName>
                </value>
                <value>
                    <fullName>Comercial/Residencial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Vistoria_Realizada__c</fullName>
        <label>Vistoria Realizada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Realizada</fullName>
                    <default>true</default>
                    <label>Não Realizada</label>
                </value>
                <value>
                    <fullName>Parcial</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Empreendimento</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome do Empreendimento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empreendimentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>